quitado decisiones vanilla, arreglado provincia alemana, louisiana ywestphalia

--- a/Plus Ultra/localisation/PlusUltra.csv
+++ b/Plus Ultra/localisation/PlusUltra.csv
@@ -142,3 +142,4 @@ CHU;Chu;;;;;;;;;;;;;
 CHU_ADJ;Chu;;;;;;;;;;;;;x
 SHU;Shu;;;;;;;;;;;;;x
 SHU_ADJ;Shu;;;;;;;;;;;;;x
+LOU_ADJ;Louisianan;;;;;;;;;;;;;
